# ChangeLog for gnome-extra/gnome-art
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-art/ChangeLog,v 1.8 2006/01/15 15:03:33 nelchael Exp $

  15 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> -gnome-art-0.2.ebuild:
  Removed old version.

  03 Jan 2006; Caleb Tennis <caleb@gentoo.org> gnome-art-0.2.ebuild,
  gnome-art-0.2-r1.ebuild:
  rexml has been removed, it's included in ruby now

*gnome-art-0.2-r1 (10 Dec 2005)

  10 Dec 2005; Simon Stelling <blubb@gentoo.org> +files/gnome-art.desktop,
  +files/gnome-splashscreen-manager.desktop, +gnome-art-0.2-r1.ebuild:
  revision bump to add a desktop icon; bug #114042

  26 May 2005; Sven Wegener <swegener@gentoo.org> metadata.xml:
  Herd name is desktop-misc not desktop-misc@gentoo.org

  22 May 2005; Jason Wever <weeve@gentoo.org> gnome-art-0.2.ebuild:
  Added ~sparc keyword.

  07 May 2005; David Holm <dholm@gentoo.org> gnome-art-0.2.ebuild:
  Added to ~ppc.

*gnome-art-0.2 (05 May 2005)

  05 May 2005; Simon Stelling <blubb@gentoo.org> +metadata.xml,
  +gnome-art-0.2.ebuild:
  initial import
