@@ -1,6 +1,24 @@
-MD5 176a68c02cafc151017531c17155fe08 ChangeLog 1133
+MD5 fd0d7ac1999ba05a7d4c88d204c8d1d8 ChangeLog 1256
+RMD160 b0762659c0957db27251baeb2da80c44cecd3eca ChangeLog 1256
+SHA256 014ee15e0b50a26cf43b80e8741eda59d061abf5ff3cc53f7a4e8cebba664791 ChangeLog 1256
 MD5 0b0e3e9ecca981288ff5ebe2decba10b files/digest-gnome-art-0.2-r1 64
+RMD160 657e477a7983cf2518ef07eee518645713a2e539 files/digest-gnome-art-0.2-r1 64
+SHA256 8dc3ad716fec268bc4e78add78e194e9d595d4debe27efb09925a6db79e43675 files/digest-gnome-art-0.2-r1 64
+MD5 6b43d24b4bf2374d82ebbb9f98bc424c files/digest-gnome-art-0.2-r2 238
+RMD160 ba0e63b4e1e69ebff52184dacdf546fe724a6150 files/digest-gnome-art-0.2-r2 238
+SHA256 6b938d9b7cfd9526af7e0e9591772943b080c8f88520ce1614ada0ec3d01ad2c files/digest-gnome-art-0.2-r2 238
 MD5 2d573a83eb2dd0794704d5a7a0a2a170 files/gnome-art.desktop 238
+RMD160 63ebb8dbf150e4c48e7df22f8cd4de891f7de8d2 files/gnome-art.desktop 238
+SHA256 16f3fd141e6c025f4aa7f69488905a728a19daa378bde2684794781433a844c7 files/gnome-art.desktop 238
 MD5 920bfbda7e69d971b5c297564c078c60 files/gnome-splashscreen-manager.desktop 260
+RMD160 3749b4fd683cc69a47ec933fbee1235c6fe8e635 files/gnome-splashscreen-manager.desktop 260
+SHA256 0cfec2f1d260383f342e9f0440cabb456ea434940313c147ee7d7cbe48305311 files/gnome-splashscreen-manager.desktop 260
 MD5 0df322dea4ad2e5b6036e4e0900ff582 gnome-art-0.2-r1.ebuild 1378
+RMD160 f975bc500bb28d24ba392a47997f09efa9c46781 gnome-art-0.2-r1.ebuild 1378
+SHA256 a51cd9e33c5818c1cd64d1ed3ba775c86e3a69b119211a132fb9bfe96f6833bf gnome-art-0.2-r1.ebuild 1378
+MD5 8fa923ba17f4d91ef82cc50c65dea470 gnome-art-0.2-r2.ebuild 1279
+RMD160 c6b6aa73ecb10e867e5347d89d7f26bc834d84d9 gnome-art-0.2-r2.ebuild 1279
+SHA256 85f9bf7b65fd1426fc796a57069244b228fae559c245db4f2111ce6e0e42c658 gnome-art-0.2-r2.ebuild 1279
 MD5 69305cf278a2fa7db864ced78902df71 metadata.xml 549
+RMD160 d76452da254a4b32d47df6fdc644a324e0b9cf90 metadata.xml 549
+SHA256 9ffd77b7f9e986644264b1083f230167ef500a51e8c8a6191f5ee782e26ab1e0 metadata.xml 549
