@@ -1,0 +1,3 @@
+MD5 4dd59ba8a84efe8dcb5637ba051394e7 gnome-art-0.2.tar.gz 66415
+RMD160 73fa3dfa0e2c6f1098d284ed141199144268e847 gnome-art-0.2.tar.gz 66415
+SHA256 87024a515b4968639d852fc8673edb048e250ce783c3f8f49adc00dc86a1c92d gnome-art-0.2.tar.gz 66415
