@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gnome-art
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-art/ChangeLog,v 1.8 2006/01/15 15:03:33 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-art/ChangeLog,v 1.9 2006/02/18 20:06:20 blubb Exp $
+
+*gnome-art-0.2-r2 (18 Feb 2006)
+
+  18 Feb 2006; Simon Stelling <blubb@gentoo.org> +gnome-art-0.2-r2.ebuild:
+  fix bug 122514
 
   15 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> -gnome-art-0.2.ebuild:
   Removed old version.
